--- a/index.html
+++ b/index.html
@@ -95,9 +95,9 @@
     <header>
         <div class="header-content">
             <!-- Add your profile picture here -->
-            <img src="passport photo.jpg" alt="Your Profile Picture" class="profile-picture">
-            <h1>Pranesh S</h1>
-            <p>Am Mechanical Engineer</p>
+            <img src="image.jpg" alt="Your Profile Picture" class="profile-picture">
+            <h1>Logapriya A</h1>
+            <p>Am Student</p>
         </div>
     </header>
 
@@ -176,7 +176,7 @@
     </section>
 
     <footer>
-        <p>&copy; 2025 Pranesh S</p>
+        <p>&copy; 2025 Logappriya A</p>
     </footer>
 
     <script>
